z-index minor correction

--- a/styles/navbar/desktop.css
+++ b/styles/navbar/desktop.css
@@ -17,7 +17,7 @@ nav
     
     transition: all .1s ease-in-out 0s;
     
-    z-index: 100;
+    z-index: 1;
 }
 
 .scrolled
